fix awesomplete overlap on submit score screen

--- a/app/assets/stylesheets/app/styles.scss
+++ b/app/assets/stylesheets/app/styles.scss
@@ -195,4 +195,6 @@ input.score-input {
   padding-right: 20px;
   padding-left: 20px;
   padding-bottom: 20px;
+  position: relative;
+  z-index: 15;
 }
